force-app/main/default/objects/Quote_Bundle_Component__c/Quote_Bundle_Component__c.object-meta.xml
<CustomObject>
    <description>Display-only record showing bundle child components on the Quote page. Replaces direct child QuoteLineItem inserts to avoid orphan-hierarchy issues with the OOTB Configure UI.</description>
    <label>Quote Bundle Component</label>
    <nameField>
        <label>Component Display Id</label>
        <type>AutoNumber</type>
        <displayFormat>QBC-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Quote Bundle Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>