force-app/main/default/objects/Quote_Bundle_Component__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components (As Bundle)</relationshipLabel>
    <relationshipName>Bundle_Components_As_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>