force-app/main/default/objects/Quote_Bundle_Component__c/fields/Component_Product__c.field-meta.xml
<CustomField>
    <fullName>Component_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components (As Component)</relationshipLabel>
    <relationshipName>Bundle_Components_As_Component</relationshipName>
    <type>Lookup</type>
</CustomField>