force-app/main/default/objects/Quote_Bundle_Component__c/fields/Display_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Price__c</fullName>
    <label>Display Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>