force-app/main/default/objects/Quote_Bundle_Component__c/fields/Included_In_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Included_In_Bundle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Included In Bundle</label>
    <type>Checkbox</type>
</CustomField>