force-app/main/default/objects/Quote_Bundle_Component__c/fields/Is_Default_Component__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Component__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Default Component</label>
    <type>Checkbox</type>
</CustomField>