force-app/main/default/objects/Quote_Bundle_Component__c/fields/Parent_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>Bundle_Components</relationshipName>
    <type>Lookup</type>
</CustomField>