force-app/main/default/objects/Quote_Bundle_Component__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>Bundle_Components</relationshipName>
    <type>Lookup</type>
</CustomField>